force-app/main/default/objects/sf_devops__Project_Test_Provider__c/sf_devops__Project_Test_Provider__c.object-meta.xml
<CustomObject>
    <label>Project_Test_Provider</label>
    <nameField>
        <label>Project_Test_provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project_Test_Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>