force-app/main/default/objects/sf_devops__Project_Test_Provider__c/fields/sf_devops__External_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__External_Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>External_Project_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>