force-app/main/default/objects/sf_devops__Project_Test_Provider__c/fields/sf_devops__Project__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Project__c</fullName>
    <label>Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipLabel>Project_Test_Providers</relationshipLabel>
    <relationshipName>Project_Test_Providers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>